--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Gregslist</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    
 </head>
 
 <body>
@@ -60,6 +62,7 @@
   </div>
 
   <form onsubmit="app.controllers.houseController.addHouse(event)">
+    <input type="text" name="name" placeholder="Title" required>
     <input type="text" name="bedroomQty" placeholder="Bedrooms" required>
     <input type="text" name="bathroomQty" placeholder="Bathrooms" required>
     <input type="text" name="houseType" placeholder="House Type" required>
@@ -74,7 +77,7 @@
   <div class="container">
     <div id="houses" class="row">
 
-        <!-- <div class="col-3">
+      <!-- <div class="col-3">
             <p>${house.bedroomQty}</p>
             <p>${house.bathroomQty}</p>
             <p>${house.houseType}</p>
