--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Gregslist</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/style.css">
-    
+  <link rel="stylesheet" href="assets/style.css">
+
 </head>
 
 <body>
@@ -17,10 +17,15 @@
   <form onsubmit="app.controllers.carController.addCar(event)">
     <label for="make">Make</label>
     <input type="text" name="make" placeholder="Make" required>
+    <label for="model">Model</label>
     <input type="text" name="model" placeholder="Model" required>
+    <label for="year">Year</label>
     <input type="number" name="year" placeholder="Year" value="2000" required>
+    <label for="price">Price</label>
     <input type="text" name="price" placeholder="Price" required>
+    <label for="color">Color</label>
     <input type="text" name="color" placeholder="Color" required>
+    <label for="url">Photo</label>
     <input type="url" name="imgUrl" placeholder="Image Link" required>
     <button type="submit">Add Car</button>
   </form>
@@ -39,10 +44,15 @@
   </div>
 
   <form onsubmit="app.controllers.jobController.addJob(event)">
+    <label for="jobName">Company</label>
     <input type="text" name="jobName" placeholder="Company Name" required>
+    <label for="jobType">Job Category</label>
     <input type="text" name="jobType" placeholder="Job Type" required>
+    <label for="position">Position Title</label>
     <input type="text" name="position" placeholder="Position">
+    <label for="payRate">Pay</label>
     <input type="text" name="payRate" placeholder="Pay Rate" required>
+    <label for="hours">Hours</label>
     <input type="text" name="hours" placeholder="Full-Time or Part-Time" required>
     <button type="submit">Add Job</button>
   </form>
@@ -62,13 +72,19 @@
   </div>
 
   <form onsubmit="app.controllers.houseController.addHouse(event)">
+    <label for="name">Title</label>
     <input type="text" name="name" placeholder="Title" required>
+    <label for="bedroomQty">Bedrooms</label>
     <input type="text" name="bedroomQty" placeholder="Bedrooms" required>
+    <label for="bathroomQty">Bathrooms</label>
     <input type="text" name="bathroomQty" placeholder="Bathrooms" required>
-    <input type="text" name="houseType" placeholder="House Type" required>
+    <label for="levels">Levels</label>
     <input type="text" name="levels" placeholder="Levels" required>
+    <label for="yearBuilt">Year Built</label>
     <input type="text" name="yearBuilt" placeholder="Year Built" required>
+    <label for="price">Price</label>
     <input type="text" name="price" placeholder="Price" required>
+    <label for="url">Photo</label>
     <input type="url" name="imgUrl" placeholder="Image Link" required>
     <button type="submit">Add House</button>
   </form>
