--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <label for="price">Price</label>
     <input type="text" name="price" placeholder="Price" required>
     <label for="color">Color</label>
-    <input type="text" name="color" placeholder="Color" required>
+    <input type="text" name="description" placeholder="Description" required>
     <label for="url">Photo</label>
     <input type="url" name="imgUrl" placeholder="Image Link" required>
     <button type="submit">Add Car</button>
@@ -105,7 +105,7 @@
 
     </div>
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
   <script src="main.js" type="module"></script>
 </body>
 
